deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apple-oidc
  name: apple-oidc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apple-oidc
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: '["default-ipv6-ippool"]'
      labels:
        app: apple-oidc
    spec:
      containers:
        - env:
            - name: RUST_LOG
              value: info
          image: theenbyperor/as207960-apple-oidc:(version)
          imagePullPolicy: IfNotPresent
          name: apple-oidc
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /secrets
              name: certs
      volumes:
        - name: certs
          secret:
            secretName: apple-oidc-certs
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apple-oidc
  name: apple-oidc
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: apple-oidc
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: gts
  name: apple-oidc-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: apple.sso.as207960.net
      http:
        paths:
          - backend:
              service:
                name: apple-oidc
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - apple.sso.as207960.net
      secretName: apple-oidc-certs-tls
